rust/surrealdb-query-builder/src/snapshots/surrealdb_macros__query_ifelse__tests__if_statement6.snap
---
source: surrealdb-macros/src/query_ifelse.rs
expression: if_statement5.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                18,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "18",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                120,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "120",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "user",
                id: String(
                    "oyelowo",
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "(SELECT * FROM $_param_00000000 WHERE city IS $_param_00000000 AND $_param_00000000 OR $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;)",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Prince Edward Island",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "(SELECT * FROM $_param_00000000 WHERE city IS $_param_00000000 AND $_param_00000000 OR $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;)",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "city IS $_param_00000000",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "(SELECT * FROM $_param_00000000 WHERE city IS $_param_00000000 AND $_param_00000000 OR $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;)",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "city ~ $_param_00000000",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "(SELECT * FROM $_param_00000000 WHERE city IS $_param_00000000 AND $_param_00000000 OR $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;)",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo Oyedayo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo Oyedayo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "user",
                id: String(
                    "oyedayo",
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "(SELECT * FROM $_param_00000000 WHERE country IS $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 20 START AT 5;)",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "INDONESIA",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "(SELECT * FROM $_param_00000000 WHERE country IS $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 20 START AT 5;)",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Canada",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Canada'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Norway",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Norway'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Cold",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "Cold",
        description: None,
    },
]
